Principal/gerenciador-de-tarefa/src/index.css
@charset "UTF-8";

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --bg: #f5f5f5;
    --text: #1a1a1a;
    --fundo-card: #c42149;
    --letra-dois: #ffffff;
    --botao: #721347;
    --card: #ffffff;
    --sidebar: #e0e0e0;
}

.dark {
    --bg: #000000de;
    --fundo-card: #5e0101;
    --text: #ffffff;
    --card: #1e1e1e;
    --main:  #5f0f27;
}

#temaEscuro::before {
    font-family: 'material-symbols-outlined';
    content: '🌗';
}

body{
    font-family: Arial, Helvetica, sans-serif;
    background: var(--bg);
    color: var(--letra-um);
    background: var(--bg);
    color: var(--text);
    transition: background 0.3s ease, color 0.3s ease;
}

.sidebar {
    position: fixed;
    top: 0;
    left: 0;
    opacity: 0;

    width: 220px;
    height: 100vh;

    background: #222;
    color: white;

    padding: 20px;

    transform: translateX(-100%); /* escondido */
    transition: transform 0.3s ease;

    z-index: 2000;
}
.historico ul li {
    background: #0000003b;
    color: #fff;
    border-radius: 4px;
}

.historico h3 {
    color: white;
}

h2 {
    padding: 10px;
}

li {
    background-color: var(--card);
    padding: 8px;
    margin: 5px 0;
    position: relative;
  padding-right: 80px;
}

.sidebar.ativo {
    transform: translateX(0);
    opacity: 1;
}



/*.historico {
    width: 280px;
    background: #111;
    padding: 15px;
    border-right: 2px solid #333;
    overflow-y: auto;
}*/

.historico li:hover {
    background: #2a2a2a;
    transform: scale(1.02);
    transition: 0.2s;
  }



.excluida {
    text-decoration: line-through;
    color: red;
}

.concluida {
    color: green;
}

.feito {
    text-decoration: line-through;
    opacity: 0.6;
}

.filtro {
    padding-top: 5px;
    padding-left: 5px;
    margin-top: 5px;
    
}

#filtroPendentes {
    margin-left: 15px;
}

#filtroConcluidas {
    margin-left: 15px;
}

#clearCompleted {
    margin: 20px;
}

.head{
    /*border: 2px dashed black;*/
    padding: 1.5rem;
    background: var(--fundo-card);
    color: var(--letra-dois);
    text-align: center;
}
.menu {
    padding: 10px;
    margin: 10px;
    transition: transform 0.3s ease;
}

.menu:hover {
    transform: rotate(90deg) scale(1.1);
}

.sidebar {
    position: fixed;
    display: flex;
    gap: 10px;
    left: 0;
    top: 0;
    padding: 20px;
    width: 200px;
    height: 100vh;
    z-index: 999;
    background: #222;
    color: white;
    display: flex;
    flex-direction: column;
    padding: 20px;
}

.sidebar button {
    transform: translateX(-20px);
    opacity: 0;
    transition: all 0.3s ease;
}

.sidebar.ativo button {
    transform: translateX(0);
    opacity: 1;
}

.sidebar button:nth-child(1) { transition-delay: 0.1s; }
.sidebar button:nth-child(2) { transition-delay: 0.2s; }
.sidebar button:nth-child(3) { transition-delay: 0.3s; }
.sidebar button:nth-child(4) { transition-delay: 0.4s; }

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  
    background: rgba(0,0,0,0.4);
    z-index: 998;
  
    opacity: 0;
    pointer-events: none;
    transition: 0.3s;
  }
  
  .overlay.ativo {
    opacity: 1;
    pointer-events: all;
  }

  .btn-limpar-historico {
    background: crimson;
    color: white;
    border: none;
    padding: 8px;
    margin: 10px 0;
    cursor: pointer;
    border-radius: 6px;
    transition: 0.2s;
  }
  
  .btn-limpar-historico:hover {
    background: darkred;
    transform: scale(1.05);
  }

button:has(span), 
button:contains("📜") {
    transition: all 0.3s ease;
}

button:hover {
    letter-spacing: 1px;
}



.dark > .head{
    /*border: 2px dashed black;*/
    padding: 1.5rem;
    background: var(--fundo-card);
    color: var(--letra-dois);
    text-align: center;
}


/*.container {
    /*border: 2px dashed black;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}*/


form {
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
}

input, select, button {
    padding: 0.75rem;
    font-size: 1rem;
}

button {
    background: var(--botao);
    color: white;
    border: none;
    cursor: pointer;
    margin: 5px;

    transition: all 0.2s ease;
}

/* Hover */
button:hover {
    transform: scale(1.05);
    filter: brightness(1.1);
}

/* Clique */
button:active {
    transform: scale(0.95);
    filter: brightness(0.9);
}

/* Efeito mais "vivo" */
button:focus {
    outline: none;
    box-shadow: 0 0 0 2px rgba(255,255,255,0.2);
}

button[type="submit"] {
    animation: pulseBtn 2s infinite;
}

@keyframes pulseBtn {
    0% { box-shadow: 0 0 0 0 rgba(255,255,255,0.3); }
    70% { box-shadow: 0 0 0 10px rgba(255,255,255,0); }
    100% { box-shadow: 0 0 0 0 rgba(255,255,255,0); }
}

.descricao {
    position: absolute;
  right: 10px;
  top: 10px;
  z-index: 10;

  background: #222;
  color: #fff;

  padding: 10px 14px; 
  border-radius: 14px;

  font-size: 0.85rem;

  max-width: 200px;
  min-width: 120px; 

  word-break: break-word;
  line-height: 1.4;

  transition: all 0.3s ease;
  }

/*Lista*/
.prioridade-alta {
    background-color: rgba(255, 0, 0, 0.3);
}

.prioridade-media {
    background-color: rgba(255, 165, 0, 0.3);
}

.prioridade-baixa {
    background-color: rgba(0, 255, 0, 0.3);
}

.prioridade-alta.timer-ativo {
    animation: pulse 1s infinite;
}

@keyframes pulse {
    0% { transform: scale(1); opacity: 1; }    
    50% { transform: scale(1.05); opacity: 0.7; }
    100% { transform: scale(1); opacity: 1; }
}

.badge.alta { background: red; }
.badge.media { background: orange; }
.badge.baixa { background: green; }

.timer-urgente {
    animation: piscar 0.5s infinite;
    background: red;
}

@keyframes piscar {
    0% { opacity: 1;}
    50% { opacity: 0.3;}
    100% { opacity: 1;}
}

.tempo-esgotado {
    background:  red;
    color:  white;
    animation:  piscar 0.8s infinite;
}

ul {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
}

/*button:disabled {
    opacity: 0.4;
    cursor: not-allowed;
  }*/

#task-list {
    list-style: none;
    padding: 0;
}

#task-list li {
    cursor: pointer;
    padding: 8px;
    transition: 02s;
    margin-bottom: 10px;
}

#task-list li:hover {
    background-color: rgba(192, 39, 39, 0.05);
}

.feito {
    text-decoration: line-through;
    opacity: 0.6;
}

.dragging {
    opacity: 0.5;
}


.calendar {
    min-width: 600px;
    margin: 0 auto;
    background-color: var(--main);
}

footer {
    text-align: center;
    padding-top: 10px;
}

@media (min-width:768px) {
    .container {
        display: grid;
        grid-template-columns: 1fr 2fr;
        gap: 2rem;
        max-width: 1000px;
        margin: 0 auto;
    }

    .form, .list {
        background: var(--letra-dois);
        padding: 1.5rem;
        border-radius: 8px;
    }

    .dark main {
        background: #5c5c5c;
        color: var(--text);
    }

    main {
        background-color: rgb(168, 37, 44);
        border-radius: 20px;
        box-shadow: 2px 2px rgba(0, 0, 0, 0.555);
    }

    .dark > main {
        background: var(--main);
    }

    .list {
        color: var(--card);
    }

    .filtro {
        padding-top: 5px;
        padding-left: 5px;
        margin-top: 5px;
        
    }
    
    #filtroPendentes {
        margin-left: 5px;
    }
    
    #filtroConcluidas {
        margin-left: 5px;
    }
    
    #clearCompleted {
        margin: 20px;
        margin-left: 75px;
    }
}

@media (max-width: 768px) {
  
    .historico {
      position: fixed;
      left: -100%;
      top: 0;
      height: 100%;
      width: 250px;
      transition: 0.3s;
      z-index: 999;
      background-color: #1d1d1d;
    }
  
    .historico.ativo {
      left: 0;
      padding-top: 20px;
    }

    h3 {
        padding-bottom: 20px;
        text-align: center;
    }
  
    .calendar {
        background-color: var(--fundo-card);
        color: white;
    }

  }

@media (min-width: 1024px) {
    .descricao {
      position: absolute;
  
      left: -260px; /* 👈 joga pra fora */
      top: 50%;
      transform: translateY(-50%);
  
      width: 220px;
      text-align: center;
  
      background: #535353;
      color: #fff;
  
      padding: 12px 16px;
      border-radius: 16px;
  
      font-size: 0.9rem;
      line-height: 1.4;
  
      box-shadow: 0 4px 20px rgba(0,0,0,0.3);

      transition: all 0.3s ease;
    }

    .descricao::after {
        content: "";
        position: absolute;
    
        right: -8px;
        top: 50%;
        transform: translateY(-50%) rotate(45deg);
    
        width: 14px;
        height: 14px;
    
        background: #535353;
      }

      /*.container {
          display: flex;
          height: 100vh;
      }*/

      .conteudo{
          flex: 1;
          padding: 20px;
          min-width: 900px;
          margin: 0 auto;
      }

      .historico {
        position: fixed;
        top: 0;
        left: -300px; /* escondido */
        width: 280px;
        height: 100vh;
        background-color: #1d1d1d;
        padding: 20px;
        overflow-y: auto;
        transition: 0.3s;
        z-index: 2000;
      }
      
      .historico.ativo {
        left: 0; /* aparece */
      }

      h3 {
        padding-bottom: 20px;
        text-align: center;
    }
  

      /*.layout {
        display: flex;
        min-height: 100vh;
      }*/


  }

